--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <li>Received and handled supply deliveries in an efficient and safe manner</li>
                 </ul>
             </p>
-                <p><b>Busperson/Host, McDonald's Canada</b><br>
+                <p><b>Busperson/Host, Canadian Niagara Hotels</b><br>
                 Niagara Falls, ON<br>
                 June 2019 - October 2020
                 <ul>
